# fastapi-agent-orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
reports/: bugs.html  docs.html  tests.html
reports/sample/: bugs.html  docs.html  tests.html
src/orchestrator/: __init__.py  agent.py  cli.py  config.py  prompts.py  providers.py  report.py  scanner.py  tools.py
tests/: test_scanner.py
